--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -21,11 +21,12 @@
 	</div>
 	<div class="form-group">
 		<label for="email">Email:</label> <input type="email"
-			class="form-control" id="email" name="email" ng-model="userDetails.email" required/>
+			class="form-control" id="email" name="email" ng-model="userDetails.email"  ng-blur="emailAvailable()" required/>
 		<div ng-messages="registerForm.email.$error" ng-if="registerForm.email.$dirty">
-			<div class="alert alert-danger" role="alert" ng-message="required">This field is required</div>
 			<div class="alert alert-danger" role="alert" ng-message="email">Please enter a valid email address</div>
 		</div>
+		<div class="alert alert-danger" role="alert" ng-if="formErrors.hasEmail">{{formErrors.email}}</div>
+
 	</div>
 	<div class="form-group">
 		<label for="password">Password:</label> <input type="password"
