--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
 			<li ng-show="authenticated"><a href="" ng-click="logout()">logout</a></li>
 		</ul>
 	</div>
-	<div ng-view class="container"></div>
+	<div style="padding-top:20px;" ng-view class="container"></div>
   <script src="js/angular-bootstrap.js" type="text/javascript"></script>
   <script src="js/index.js"></script>
 </body>
