--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,13 +13,14 @@
 <body ng-app="helpingHands" ng-cloak class="ng-cloak">
   <div ng-controller="navigation" class="container">
 		<ul class="nav nav-pills" role="tablist">
-			<li class="active"><a href="#/">home</a></li>
-			<li><a href="#/login">login</a></li>
-			<li><a href="#/register">join</a></li>
+			<li class="active"><a ui-sref="index">home</a></li>
+			<li><a ui-sref="login">login</a></li>
+			<li><a ui-sref="register">join</a></li>
+            <li><a ui-sref="healingRequest">Request</a></li>
 			<li ng-show="authenticated"><a href="" ng-click="logout()">logout</a></li>
 		</ul>
 	</div>
-	<div style="padding-top:20px;" ng-view class="container"></div>
+	<div style="padding-top:20px;" ui-view class="container"></div>
   <script src="js/angular-bootstrap.js" type="text/javascript"></script>
   <script src="js/index.js"></script>
 </body>
