Refactored authtoken to header, backend validations and implementation for Healing request

--- a/src/main/resources/static/healRequest.html
+++ b/src/main/resources/static/healRequest.html
@@ -13,12 +13,16 @@
 	</div>
     <div class="form-group">
         <label for="description">Description:</label>
-<!--        <p>TODO: Error handling for description</p>-->
-        <textarea ng-model="healRequest.description" class="form-control" placeholder="Add details like patient name, age, gender and how long he/she is suffering from the disease." rows="4"></textarea>
+        <textarea name="description" ng-model="healRequest.description" class="form-control" placeholder="Add details like patient name, age, gender and how long he/she is suffering from the disease." rows="4" ng-minlength="30" ng-maxlength="500" required></textarea>
+        <div  ng-messages="healRequestForm.description.$error" ng-if="healRequestForm.description.$dirty">
+			<div class="alert alert-danger" role="alert" ng-message="required">This field is required</div>
+			<div class="alert alert-danger" role="alert" ng-message="minlength">Message must be atleast 30 characters</div>
+			<div class="alert alert-danger" role="alert" ng-message="maxlength">Message must not exceed 500 characters</div>
+		</div>
     </div>
     <div class="form-group">
         <label class="btn btn-danger">
-            <input type="checkbox" ng-model="healRequest.isEmergency" autocomplete="off" checked> is Emergency
+            <input type="checkbox" ng-model="healRequest.emergency" autocomplete="off" checked> is Emergency
         </label>
     </div>
     <div class="form-group">
@@ -27,14 +31,16 @@
     </div>
     <div class="form-group">
         <label for="underMedication">Under Medication:</label>
-		<label  for="underMedicationYes" class="radio-inline"><input id="underMedicationYes" type="radio" ng-model="healRequest.underMedication" value="true" name="underMedication" required>Yes</label>
+		<label  for="underMedicationYes" class="radio-inline"><input id="underMedicationYes"  ng-click="setShowMedicationDetails()" type="radio" ng-model="healRequest.underMedication" value="true" name="underMedication" required>Yes</label>
 		<label for="underMedicationNo" class="radio-inline"><input id="underMedicationNo" type="radio" ng-model="healRequest.underMedication" ng-click="openDisclaimer()" value="false" name="underMedication" required>No</label>
 	</div>
     <uib-alert  type="warning" ng-if="showDisclaimer" close="closeDisclaimerAlert()">{{msg}}</uib-alert>
-    <div ng-if="healRequest.underMedication" class="form-group">
+    <div ng-if="showMedicationDetails" class="form-group">
         <label for="medicationDetails">Medication Details:</label>
-<!--        <p>TODO: Error handling for description</p>-->
-        <textarea ng-model="healRequest.medicationDetails" class="form-control" rows="4" placeholder="Medication details enables the healer to better understand the case. Incase you have medical documents like x-ray, reports etc.. we kindly request you to upload in Google Drive or any cloud storage and give the links here."></textarea>
+        <textarea name="medicationDetails" ng-model="healRequest.medicationDetails" class="form-control" rows="4" placeholder="Medication details enables the healer to better understand the case. Incase you have medical documents like x-ray, reports etc.. we kindly request you to upload in Google Drive or any cloud storage and give the links here." ng-maxlength="500"></textarea>
+        <div  ng-messages="healRequestForm.medicationDetails.$error" ng-if="healRequestForm.medicationDetails.$dirty">
+			<div class="alert alert-danger" role="alert" ng-message="maxlength">Message must not exceed 500 characters</div>
+		</div>
     </div>
     
 	
