--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,6 +17,7 @@
 			<li><a ui-sref="login">login</a></li>
 			<li><a ui-sref="register">join</a></li>
             <li><a ui-sref="healingRequest">Request</a></li>
+            <li><a ui-sref="healRequests">Healing Requests</a></li>
 			<li ng-show="authenticated"><a href="" ng-click="logout()">logout</a></li>
 		</ul>
 	</div>
