--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,5 +24,6 @@
 	<div style="padding-top:20px;" ui-view class="container"></div>
   <script src="js/angular-bootstrap.js" type="text/javascript"></script>
   <script src="js/index.js"></script>
+  <script src="js/angular-services.js" type="text/javascript"></script>
 </body>
 </html>
